@@ -142,6 +142,26 @@ ED00000080
 64000A00050000007B782B797D
 {x+y}[3]
 680200000064000A00050000007B782B797DF90300000000000000
+insert [1]
+6802000000661cf90100000000000000
+xbar
+6471000a00240000006b297b782a792064697620783a245b3136683d6162735b40785d3b226a2224783b785d7d
+not
+650f
+and
+6605
+md5
+68020000006610f9f1ffffffffffffff
+any
+6902000000651c6802000000660bf662
+save
+6a6471000a003c0000006b297b245b313d23703a605c3a2a7c605c3a783a2d3121783b7365745b783b2e202a705d3b2020207820303a2e682e74785b7020315d402e2a705d7d
+raze
+6b660c
+sums
+6c6601
+prev
+6d6600
 (enlist `a)!(enlist 1)
 630B000100000061000700010000000100000000000000
 1 2!`abc`cdefgh
